--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-    "name": "This is Inline Search Bot by @RoyalKrrishna",
-    "description": "This is Inline Channel Messages Search Bot by @RoyalKrrishna",
+    "name": "This is Inline Search Bot by @Md_Matin_Ashraf",
+    "description": "This is Inline Channel Messages Search Bot by @Md_Matin_Ashraf",
     "keywords": [
         "telegram",
         "channel",
